tests/NormalTests/paczka1/fuzzy1/47515090.err
Error in line 4: 9or1fUhPkA7 S528 49,7
Error in line 3: y6VRDCL S200 48,9
Error in line 16: Yc9Z8 S200 84,8
Error in line 30: y6VRDCL A183 49,2
Error in line 28: DkjBJYU A938 35,6
